--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
       # Build the Docker image
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/HotelRoomBooking:latest .
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/hotelRoomBooking:latest .
       # Push the image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/HotelRoomBooking:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/hotelRoomBooking:latest
